[gd_scene load_steps=6 format=3 uid="uid://dwer2l3a4n73g"]

[ext_resource type="Script" path="res://assets/scripts/thing.gd" id="1_spy63"]
[ext_resource type="Texture2D" uid="uid://cixx3t807ytd3" path="res://assets/sprites/scientist/New_Piskel_1.png" id="2_bblyg"]
[ext_resource type="AudioStream" uid="uid://cjsoqgbm08phb" path="res://tp1.wav" id="3_nl563"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5utc"]
size = Vector2(17, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_648xw"]
size = Vector2(17, 32)

[node name="thing" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_spy63")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.5, -16)
shape = SubResource("RectangleShape2D_f5utc")

[node name="topRaycast" type="RayCast2D" parent="."]
z_index = 1
position = Vector2(9, -31.582)
target_position = Vector2(61, -1.418)
collision_mask = 2
collide_with_areas = true

[node name="bottomRaycast" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(60, 0)
collision_mask = 2

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(9, -16)
target_position = Vector2(11, 0)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(8.5, -16)
shape = SubResource("RectangleShape2D_648xw")

[node name="NewPiskel1" type="Sprite2D" parent="."]
position = Vector2(8, -16)
texture = ExtResource("2_bblyg")
hframes = 2
vframes = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nl563")

[node name="teleportTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="slowdownTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
